# ai-hackthon

./: README.md
jiangjianfeng/artifacts/lockdep/: Cargo.toml  README.md  atomic_mode_ostd_dependents_review.md  build.rs  interrupts.md  lock_class.md  lockdep-toml.md  lockdep_cycle_review.md  lockdep_ostd_workspace_review.md  lockdep_report_review.md  plan.md  progress.md  summary.md
jiangjianfeng/artifacts/lockdep/analysis/: Cargo.toml
jiangjianfeng/artifacts/lockdep/analysis/src/: collect.rs  lib.rs  model.rs
jiangjianfeng/artifacts/lockdep/src/: driver.rs  main.rs
jiangjianfeng/artifacts/lockdep/tests/: fixture_cases.rs
lincan/: AGENTS.md  Cargo.toml  README.md  experiments.md  flake.nix  lessons.md
lincan/agents/: frontend-code-reviewer.md  frontend-designer.md  frontend-worker.md  rust-code-reviewer.md  rust-worker.md
lincan/artifacts/parser/: PHASE0_PREP.md
lincan/artifacts/parser/src/: cli.rs  emit.rs  error.rs  extract.rs  lib.rs  model.rs  workspace.rs
lincan/artifacts/web/: PHASE0_PREP.md  README.md  package.json  pnpm-lock.yaml
lincan/artifacts/web/src/: App.tsx  index.css
lincan/artifacts/web/src/app/: AppShell.tsx  app-state-context.ts  app-state.tsx  types.ts
lincan/artifacts/web/src/components/: GraphCanvas.tsx  InspectorDrawer.tsx  LeftRail.tsx  TopBar.tsx
lincan/artifacts/web/src/lib/: artifact-contract.ts  code-jump.ts  force-layout.ts  graph.ts  theme.ts
lincan/examples/workspace_demo/: Cargo.toml  README.md
lincan/examples/workspace_demo/service_app/: Cargo.toml
lincan/src/: main.rs
lincan/tests/: phase1_parser.rs
(+241 files in other folders)
