[package]
name = "rustmap"
version = "0.1.0"
edition = "2024"

[lib]
path = "artifacts/parser/src/lib.rs"

[[bin]]
name = "cargo-rustmap"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.19"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
ra_ap_syntax = "0.0.325"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
thiserror = "2.0"
walkdir = "2.5"
