[package]
name = "cargo-lockdep"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/asterinas/asterinas"
build = "build.rs"
default-run = "cargo-lockdep"

[[bin]]
name = "cargo-lockdep"
path = "src/main.rs"
test = false

[[bin]]
name = "lockdep-driver"
path = "src/driver.rs"
test = false

[workspace]
members = ["analysis"]

[dependencies]
analysis = { path = "analysis" }
clap = { version = "4.5.47", features = ["derive"] }
rustc_tools_util = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"

[build-dependencies]
rustc_tools_util = "0.3.0"

[package.metadata.rust-analyzer]
rustc_private = true
